# libcryptui

./: .gitignore  HACKING  MAINTAINERS  Makefile.am  Makefile.decl  NEWS  autogen.sh  configure.ac  libcryptui.doap
daemon/: .gitignore  Makefile.am  seahorse-context.c  seahorse-context.h  seahorse-daemon.c  seahorse-daemon.h  seahorse-dbus-server.c  seahorse-gpg-op.c  seahorse-gpg-op.h  seahorse-gpg-options.c  seahorse-gpg-options.h  seahorse-gpgme-data.c  seahorse-gpgme-data.h  seahorse-gpgme-generate.c  seahorse-gpgme-generate.h  seahorse-gpgme-key-op.c  seahorse-gpgme-key-op.h  seahorse-gpgme-key.c  seahorse-gpgme-key.h  seahorse-gpgme-operation.c  seahorse-gpgme-operation.h  seahorse-gpgme-source.c  seahorse-gpgme-source.h  seahorse-gpgme-subkey.c  seahorse-gpgme-subkey.h  seahorse-gpgme-uid.c  seahorse-gpgme-uid.h  seahorse-gpgme.c  seahorse-gpgme.h  seahorse-libdialogs.h  seahorse-marshal.c  seahorse-marshal.h  seahorse-notification.c  seahorse-object-list.c  seahorse-object-list.h  seahorse-object.c  seahorse-object.h  seahorse-operation.c  seahorse-operation.h  seahorse-passphrase.c  (+43 more)
data/: .gitignore  Makefile.am  cryptui.schemas.in  org.gnome.seahorse.recipients.convert
libcryptui/: Makefile.am  cryptui-defines.h  cryptui-key-chooser.c  cryptui-key-chooser.h  cryptui-key-combo.c  cryptui-key-combo.h  cryptui-key-list.c  cryptui-key-list.h  cryptui-key-store.c  cryptui-key-store.h  cryptui-keyset.c  cryptui-keyset.h  cryptui-priv.h  cryptui.c  cryptui.h  cryptui.pc.in
libcryptui/tests/: cryptui-test-ui.c
libegg/: Makefile.am  egg-datetime.c  egg-datetime.h  eggdesktopfile.c  eggsmclient-xsmp.c
pixmaps/22x22/: Makefile.am
pixmaps/48x48/: Makefile.am
pixmaps/scalable/: Makefile.am
po/: LINGUAS  POTFILES.in  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  kn.po  lt.po  lv.po  mk.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  ug.po  uk.po  vi.po  zh_CN.po  (+2 more)
reference/: Makefile.am
tests/: dbus-crypto-test.py  dbus-discover-test.py  dbus-display-notification-test.py  dbus-import.py  dbus-listen-keyset.py  dbus-match-test.py  dbus-test.py
